--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="form">
           <p >From :</p>
           <div class="select-containar">  
-            <img id="Flag"src="https://flagsapi.com/PK/flat/64.png" />
+            <img id="Flag"src="https://flagsapi.com/US/flat/64.png" />
             <select id="fromselect"></select>
           </div>
         </div>
@@ -33,7 +33,7 @@
           <p>To :</p>
           <div class="select-containar">
             
-             <img src="https://flagsapi.com/US/flat/64.png" />
+             <img src="https://flagsapi.com/PK/flat/64.png" />
                       
             <select  id="Toselect">
               <!-- <option value="USD">US</option> -->
